Claude code conversion to a vite typescript site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <div id="info">Click and drag to rotate • Scroll to zoom</div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.ts"></script>
 </body>
 </html>
