--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procedural Spaceship Generator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <div id="controls">
@@ -14,6 +14,6 @@
         <div id="info">Click and drag to rotate • Scroll to zoom</div>
     </div>
 
-    <script type="module" src="main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
 </body>
 </html>
